# openai-auto-registrar

./: .gitignore  app.py  main.py  pyproject.toml  requirements.txt  singup.py
templates/: index.html
