[project]
name = "singup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "curl-cffi>=0.14.0",
    "fastapi>=0.135.0",
    "jinja2>=3.1.6",
    "uvicorn>=0.41.0",
]


 [build-system]
 requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
